# humming-birds

./: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  LICENSE.txt  README.md  humming-birds.sln  pyproject.toml
Assets/Hummingbird/NNModels/: Hummingbird_03.onnx
Assets/Hummingbird/Prefabs/: FloatingIsland.prefab  FlowerBud.prefab  Hummingbird.prefab
Assets/Hummingbird/Scenes/: FlowerIsland.unity  Training.unity
Assets/Hummingbird/Scenes/Training/: LightingData.asset  ReflectionProbe-0.exr
Assets/Hummingbird/Scripts/: Flower.cs  FlowerArea.cs  GameManager.cs  HummingbirdAgent.cs
Assets/ML-Agents/Timers/: FlowerIsland_timers.json  Training_timers.json
ProjectSettings/: ProjectSettings.asset
ml_agents/: Hummingbird.onnx
