[tool.poetry]
name = "humming-birds"
version = "0.1.0"
description = "Humming birds with ML agents"
authors = ["jprusso <jprussoibanez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mlagents = "^0.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
